# lab2sysprogcalc

./: CMakeLists.txt  Makefile  main.cpp
